@@ -19,20 +19,18 @@
 #include "./hacking.h"
 
 LIST_HEAD(hacking_module_head);
-CLIB_MODULE_NAME(hacking);
-CLIB_MODULE_NEEDED0();
 
 static char itersn_cmdname[] = "itersn";
 C_SYM void itersn_usage(void);
 C_SYM long itersn_cb(int argc, char *argv[]);
 
-static char hacking_cmdname[] = "hacking";
-static void hacking_usage(void)
+static char havefun_cmdname[] = "havefun";
+static void havefun_usage(void)
 {
-	fprintf(stdout, "\t\tRun hacking modules\n");
+	fprintf(stdout, "\tRun hacking modules\n");
 }
 
-static long hacking_cb(int argc, char *argv[])
+static long havefun_cb(int argc, char *argv[])
 {
 	struct hacking_module *tmp;
 	list_for_each_entry(tmp, &hacking_module_head, sibling) {
@@ -43,25 +41,26 @@ static long hacking_cb(int argc, char *argv[])
 	return 0;
 }
 
-CLIB_MODULE_INIT()
+SI_MOD_SUBENV_INIT()
 {
+	int err;
 	INIT_LIST_HEAD(&hacking_module_head);
 
-	int err;
 	err = clib_cmd_ac_add(itersn_cmdname, itersn_cb, itersn_usage);
 	if (err) {
 		err_msg("clib_cmd_ac_add err");
 		return -1;
 	}
 
-	err = clib_cmd_ac_add(hacking_cmdname, hacking_cb, hacking_usage);
+	err = clib_cmd_ac_add(havefun_cmdname, havefun_cb, havefun_usage);
 	if (err) {
 		err_msg("clib_cmd_ac_add err");
 		goto err0;
 	}
 
 	/* load all hacking modules */
-	struct list_head *head = si_module_get_head(SI_PLUGIN_CATEGORY_HACKING);
+	struct list_head *head;
+	head = si_module_get_head(SI_PLUGIN_CATEGORY_HACKING);
 	err = si_module_load_all(head);
 	if (err) {
 		err_dbg(0, "si_module_load_all err");
@@ -71,18 +70,17 @@ CLIB_MODULE_INIT()
 	return 0;
 
 err1:
-	clib_cmd_ac_del(hacking_cmdname);
+	clib_cmd_ac_del(havefun_cmdname);
 err0:
 	clib_cmd_ac_del(itersn_cmdname);
 	return -1;
 }
 
-CLIB_MODULE_EXIT()
+SI_MOD_SUBENV_DEINIT()
 {
-	struct list_head *head = si_module_get_head(SI_PLUGIN_CATEGORY_HACKING);
+	struct list_head *head;
+	head = si_module_get_head(SI_PLUGIN_CATEGORY_HACKING);
 	si_module_unload_all(head);
-
-	clib_cmd_ac_del(itersn_cmdname);
-	clib_cmd_ac_del(hacking_cmdname);
-	return;
 }
+
+SI_MOD_SUBENV_SETUP(hacking);
