@@ -20,6 +20,58 @@
 #include "si_gcc.h"
 #include "./hacking.h"
 
+#define	DEFTREECODE(SYM, NAME, TYPE, LENGTH) TYPE,
+#define	END_OF_BASE_TREE_CODES tcc_exceptional,
+const enum tree_code_class tree_code_type[] = {
+#include <all-tree.def>
+};
+#undef DEFTREECODE
+#undef END_OF_BASE_TREE_CODES
+
+#define DEFTREECODE(SYM, NAME, TYPE, LENGTH) LENGTH,
+#define END_OF_BASE_TREE_CODES	0,
+const unsigned char tree_code_length[] = {
+#include <all-tree.def>
+};
+#undef DEFTREECODE
+#undef END_OF_BASE_TREE_CODES
+
+#ifndef HAS_TREE_CODE_NAME
+#define	HAS_TREE_CODE_NAME
+#define DEFTREECODE(SYM, NAME, TYPE, LEN) NAME,
+#define END_OF_BASE_TREE_CODES "@dummy",
+static const char *const tree_code_name[] = {
+#include "all-tree.def"
+};
+#undef DEFTREECODE
+#undef END_OF_BASE_TREE_CODES
+#endif
+
+#define DEFGSSTRUCT(SYM, STRUCT, HAS_TREE_OP) \
+	(HAS_TREE_OP ? sizeof (struct STRUCT) - sizeof (tree) : 0),
+EXPORTED_CONST size_t gimple_ops_offset_[] = {
+#include "gsstruct.def"
+};
+#undef DEFGSSTRUCT
+
+#define DEFGSSTRUCT(SYM, STRUCT, HAS_TREE_OP) sizeof (struct STRUCT),
+static const size_t gsstruct_code_size[] = {
+#include "gsstruct.def"
+};
+#undef DEFGSSTRUCT
+
+#define DEFGSCODE(SYM, NAME, GSSCODE)	NAME,
+const char *const gimple_code_name[] = {
+#include "gimple.def"
+};
+#undef DEFGSCODE
+
+#define DEFGSCODE(SYM, NAME, GSSCODE)	GSSCODE,
+EXPORTED_CONST enum gimple_statement_structure_enum gss_for_code_[] = {
+#include "gimple.def"
+};
+#undef DEFGSCODE
+
 CLIB_MODULE_NAME(kern_copyuser);
 CLIB_MODULE_NEEDED0();
 static void kern_copyuser_cb(void);
